# local_llm_edge_pi5

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  clean-start.sh  package-lock.json  package.json  server-helper.js  setup.sh  start-app.sh  start-server.sh
examples/: basic_usage.js  streaming_example.js
src/cli/: index.js
src/cpp/bindings/: node_binding.cpp
src/cpp/inference/: inference_engine.cpp  inference_engine.h  prompt_processor.cpp  prompt_processor.h
src/cpp/model/: llm_model.cpp  llm_model.h
src/server/: index.js
src/ui/: package-lock.json  package.json
src/ui/src/: App.css  App.js
test/: test.js
